--- a/DA Project 1/requirements.txt
+++ b/DA Project 1/requirements.txt
@@ -1,5 +1,17 @@
-pandas==2.2.*
-numpy==2.2.*
-networkx==3.4.*
-matplotlib==3.10.*
-click==8.1.*
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
+kiwisolver==1.4.8
+matplotlib==3.10.1
+networkx==3.4.2
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pygraphviz==1.14
+pyparsing==3.2.2
+python-dateutil==2.9.0.post0
+pytz==2025.1
+six==1.17.0
+tzdata==2025.2
